fix task text and calendar spacing

--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -101,4 +101,5 @@ a.input-button {
 
 .task-text {
   min-width: 0;
+  justify-content: space-between;
 }
